--- a/SwiftyProjects/Base.lproj/Main.storyboard
+++ b/SwiftyProjects/Base.lproj/Main.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="27N-PQ-kvs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8uN-Wq-ihc">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="i6B-sl-6IV">
             <objects>
                 <navigationController id="27N-PQ-kvs" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="DAm-pD-jBD"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="IrW-hB-1AX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -20,7 +21,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ECs-6u-H2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-729" y="-637"/>
+            <point key="canvasLocation" x="-1027" y="159"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -34,7 +35,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xq5-Xd-N6X">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xq5-Xd-N6X">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
@@ -237,6 +238,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="360"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="TQR-4Z-uV6">
+            <objects>
+                <tabBarController id="8uN-Wq-ihc" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="pnh-PQ-wFP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="27N-PQ-kvs" kind="relationship" relationship="viewControllers" id="azQ-fb-tYR"/>
+                        <segue destination="dwj-KR-hIH" kind="relationship" relationship="viewControllers" id="5K5-M0-SD0"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VQX-1P-l5B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1929" y="496"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="FPf-Fi-MHS">
+            <objects>
+                <navigationController id="dwj-KR-hIH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bHR-qB-qjb"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="urm-Pv-oa2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="QTj-bJ-Zrq" kind="relationship" relationship="rootViewController" id="qOi-GJ-4f3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MSx-EL-JQt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1161" y="1108"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="mDI-Se-2la">
+            <objects>
+                <viewController id="QTj-bJ-Zrq" customClass="ContainerViewController" customModule="SwiftyProjects" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Hoz-fh-Rlj"/>
+                        <viewControllerLayoutGuide type="bottom" id="XSH-qn-woJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="udb-CY-u94">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qku-O2-GnS">
+                                <rect key="frame" x="0.0" y="264" width="600" height="287"/>
+                                <connections>
+                                    <segue destination="s9a-GJ-C9K" kind="embed" id="5xB-54-x2b"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Qku-O2-GnS" firstAttribute="width" secondItem="udb-CY-u94" secondAttribute="width" id="7cT-hE-js4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Qku-O2-GnS" secondAttribute="trailing" constant="-20" id="LGh-rc-cI7"/>
+                            <constraint firstItem="Qku-O2-GnS" firstAttribute="leading" secondItem="udb-CY-u94" secondAttribute="leadingMargin" constant="-20" id="Nka-9D-5cK"/>
+                            <constraint firstItem="Qku-O2-GnS" firstAttribute="top" secondItem="Hoz-fh-Rlj" secondAttribute="bottom" constant="200" identifier="containerFromTop" id="heA-tx-udO"/>
+                            <constraint firstItem="XSH-qn-woJ" firstAttribute="top" secondItem="Qku-O2-GnS" secondAttribute="bottom" id="sZ6-EV-74X"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="YRh-4k-MqH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E5s-KS-deP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-421" y="1108"/>
+        </scene>
+        <!--Contained View Controller-->
+        <scene sceneID="ga1-a8-VRa">
+            <objects>
+                <viewController id="s9a-GJ-C9K" customClass="ContainedViewController" customModule="SwiftyProjects" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VEy-zK-jjY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="287"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nXP-Kl-FoK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="388" y="1087.5"/>
         </scene>
     </scenes>
 </document>
