--- a/SwiftyProjects/Base.lproj/Main.storyboard
+++ b/SwiftyProjects/Base.lproj/Main.storyboard
@@ -40,10 +40,10 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="taxonCount" rowHeight="60" id="AMJ-Vk-DPW" customClass="TaxonCountCell" customModule="SwiftyProjects" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="49.5" width="600" height="60"/>
+                                        <rect key="frame" x="0.0" y="50" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AMJ-Vk-DPW" id="ujx-lX-LPf">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="hcv-RE-zxG">
@@ -98,10 +98,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userCount" rowHeight="60" id="JHF-lT-MrZ" customClass="UserCountCell" customModule="SwiftyProjects" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="109.5" width="600" height="60"/>
+                                        <rect key="frame" x="0.0" y="110" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JHF-lT-MrZ" id="p2y-wi-WG7">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Aao-Gn-DBc">
@@ -237,7 +237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="360"/>
+            <point key="canvasLocation" x="-257" y="148"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="TQR-4Z-uV6">
@@ -292,17 +292,120 @@
                                     <segue destination="s9a-GJ-C9K" kind="embed" id="5xB-54-x2b"/>
                                 </connections>
                             </containerView>
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="KHC-Jp-XCC">
+                                <rect key="frame" x="0.0" y="64" width="600" height="200"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yVl-t8-iPv">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="8"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="8" id="b99-Bj-kLd"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XLc-GJ-JLA">
+                                        <rect key="frame" x="0.0" y="16" width="600" height="60"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2pZ-gC-fJ6">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="0nS-5f-LgD"/>
+                                                    <constraint firstAttribute="width" constant="60" id="w7H-Hc-yMM"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qpk-4c-0Ty">
+                                                <rect key="frame" x="70" y="0.0" width="530" height="60"/>
+                                                <mutableString key="text">Polaroid crucifix pour-over forage. +1 kitsch slow-carb whatever, try-hard craft beer biodiesel pickled. Synth post-ironic squid truffaut kitsch flannel. Taxidermy slow-carb godard, wolf YOLO flexitarian tattooed marfa mustache single-origin coffee. +1 shoreditch farm-to-table skateboard letterpress. Tumblr kickstarter deep v hoodie. 8-bit actually blue bottle meditation, everyday carry ramps blog skateboard taxidermy polaroid brooklyn.
+
+Kale chips direct trade street art venmo, viral keytar fanny pack swag stumptown occupy tumblr celiac portland. Pork belly cred pinterest quinoa before they sold out, gluten-free godard. Cray knausgaard shoreditch disrupt stumptown, microdosing cliche typewriter asymmetrical 8-bit try-hard austin 3 wolf moon. Pug williamsburg intelligentsia fashion axe, hoodie thundercats roof party chambray four dollar toast gochujang. Swag franzen 90's, pitchfork vegan butcher chicharrones slow-carb. Occupy heirloom fixie narwhal pork belly gentrify humblebrag hoodie, knausgaard man bun VHS kogi chillwave flexitarian neutra. Slow-carb church-key keffiyeh letterpress, put a bird on it hashtag wayfarers paleo meh.
+
+</mutableString>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="Ldn-kJ-f1C"/>
+                                        </constraints>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4UT-LT-LTJ">
+                                        <rect key="frame" x="0.0" y="83" width="600" height="44"/>
+                                        <color key="backgroundColor" red="0.45490196078431372" green="0.67450980392156867" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="xu7-Ui-Cvh"/>
+                                        </constraints>
+                                        <state key="normal" title="Join This Project">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IkK-2x-V69">
+                                        <rect key="frame" x="0.0" y="134" width="600" height="58"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="olz-cs-1xq">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="58"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="58" id="vko-vc-s1d"/>
+                                                </constraints>
+                                                <state key="normal" title="1320 Observations"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pGs-iC-i7c">
+                                                <rect key="frame" x="200" y="0.0" width="200" height="58"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <state key="normal" title="300 Species"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t4j-4G-KAl">
+                                                <rect key="frame" x="400" y="0.0" width="200" height="58"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <state key="normal" title="50 Observers"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z7G-ad-jag">
+                                        <rect key="frame" x="0.0" y="199" width="600" height="1"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="LCw-Hl-f4Z"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="z7G-ad-jag" firstAttribute="width" secondItem="KHC-Jp-XCC" secondAttribute="width" id="11o-GB-ME6"/>
+                                    <constraint firstAttribute="trailing" secondItem="4UT-LT-LTJ" secondAttribute="trailing" constant="15" id="Pef-aD-n4v"/>
+                                    <constraint firstAttribute="trailing" secondItem="z7G-ad-jag" secondAttribute="trailing" id="a8m-Tt-dg3"/>
+                                    <constraint firstItem="IkK-2x-V69" firstAttribute="leading" secondItem="KHC-Jp-XCC" secondAttribute="leading" id="bXx-ae-Gsn"/>
+                                    <constraint firstItem="IkK-2x-V69" firstAttribute="width" secondItem="KHC-Jp-XCC" secondAttribute="width" id="buT-Jz-wwf"/>
+                                    <constraint firstItem="4UT-LT-LTJ" firstAttribute="leading" secondItem="KHC-Jp-XCC" secondAttribute="leading" constant="15" id="djt-5P-ShN"/>
+                                    <constraint firstItem="XLc-GJ-JLA" firstAttribute="leading" secondItem="KHC-Jp-XCC" secondAttribute="leading" constant="15" id="f4p-yb-fuL"/>
+                                    <constraint firstAttribute="height" constant="200" id="jbm-5c-8uA"/>
+                                    <constraint firstAttribute="trailing" secondItem="XLc-GJ-JLA" secondAttribute="trailing" constant="15" id="l5s-k9-Dud"/>
+                                    <constraint firstItem="z7G-ad-jag" firstAttribute="leading" secondItem="KHC-Jp-XCC" secondAttribute="leading" id="otX-3k-xHw"/>
+                                    <constraint firstItem="IkK-2x-V69" firstAttribute="centerX" secondItem="KHC-Jp-XCC" secondAttribute="centerX" id="sYp-lN-pLT"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Qku-O2-GnS" firstAttribute="width" secondItem="udb-CY-u94" secondAttribute="width" id="7cT-hE-js4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Qku-O2-GnS" secondAttribute="trailing" constant="-20" id="LGh-rc-cI7"/>
                             <constraint firstItem="Qku-O2-GnS" firstAttribute="leading" secondItem="udb-CY-u94" secondAttribute="leadingMargin" constant="-20" id="Nka-9D-5cK"/>
+                            <constraint firstItem="KHC-Jp-XCC" firstAttribute="centerX" secondItem="udb-CY-u94" secondAttribute="centerX" id="W8H-XD-Vs7"/>
                             <constraint firstItem="Qku-O2-GnS" firstAttribute="top" secondItem="Hoz-fh-Rlj" secondAttribute="bottom" constant="200" identifier="containerFromTop" id="heA-tx-udO"/>
+                            <constraint firstItem="KHC-Jp-XCC" firstAttribute="width" secondItem="udb-CY-u94" secondAttribute="width" id="rWa-56-koL"/>
                             <constraint firstItem="XSH-qn-woJ" firstAttribute="top" secondItem="Qku-O2-GnS" secondAttribute="bottom" id="sZ6-EV-74X"/>
+                            <constraint firstItem="KHC-Jp-XCC" firstAttribute="bottom" secondItem="Hoz-fh-Rlj" secondAttribute="bottom" constant="200" identifier="headerToTop" id="vM8-HN-I8k"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YRh-4k-MqH"/>
+                    <connections>
+                        <outlet property="joinButton" destination="4UT-LT-LTJ" id="bf8-fj-dZp"/>
+                        <outlet property="observationsButton" destination="olz-cs-1xq" id="bkh-CI-Psk"/>
+                        <outlet property="observersButton" destination="t4j-4G-KAl" id="l3c-hQ-pVl"/>
+                        <outlet property="projectsImageView" destination="2pZ-gC-fJ6" id="LCs-IK-zOP"/>
+                        <outlet property="speciesButton" destination="pGs-iC-i7c" id="KBV-FC-iXK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5s-KS-deP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -319,7 +422,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nXP-Kl-FoK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="388" y="1087.5"/>
+            <point key="canvasLocation" x="293" y="1166.5"/>
         </scene>
     </scenes>
 </document>
